about page service timing and spacing issue solved

--- a/church/static/css/landingpage.css
+++ b/church/static/css/landingpage.css
@@ -682,7 +682,7 @@
     .our-churches-hd {
       font-size: 20px;
       width: max-content;
-      margin-top: 50px;
+      margin-top: 0px;
       margin-bottom: 0;
       display: block;
     }
@@ -965,18 +965,18 @@
     padding-bottom: 50px;
   }
 }
-@media (max-width : 800px) {
+@media(max-height : 800px) {
   .landing-page {
+    max-height: 100% !important;
     padding-bottom: 50px;
-    background: red !important;
   }
  
-  .landing-page {
+  /* .landing-page {
     max-height: 90vh !important;
     background-image: none;
     background-image: url("../img/bg-medium.jpg");
     background-position: top;
     background-size: auto 70vh;
     background-repeat: no-repeat;
-  }
+  } */
 }
