--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -1178,12 +1178,12 @@ button {
     padding-top: 30px;
     display: flex;
   }
-  .p-decor-box {
+  /* .p-decor-box {
     width: 40%;
     height: 140px;
     display: block;
     bottom: -226em;
-  }
+  } */
   .timing .timing-head {
     font-weight: bold;
     margin-bottom: 7px;
